[package]
name = "kbs-test"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.9.0", features = ["cookies"] }
aes = "0.8.4"
anyhow = "1.0.93"
base64 = "0.22.1"
clap = { version = "4.5.35", features = ["derive"] }
elliptic-curve = { version = "0.13.8", features = ["jwk"] }
kbs-types = "0.9.3"
lazy_static = "1.5.0"
p384 = { version = "0.13.0", features = ["jwk"] }
rand_core = "0.6.4"
serde_json = "1.0.133"
sha2 = "0.10.8"
uuid = { version = "1.11.0", features = ["v4"] }
