[package]
name = "kbs-test"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.9.0", features = ["cookies"] }
aes = "0.8.4"
aes-gcm = "0.10.3"
aes-kw = "0.2.1"
anyhow = "1.0.93"
base64 = "0.22.1"
clap = { version = "4.5.35", features = ["derive"] }
concat-kdf = "0.1.0"
hex = "0.4.3"
kbs-types = "0.14.0"
lazy_static = "1.5.0"
p521 = { version = "0.13.3", features = ["ecdh"] }
rand = "0.8.5"
sec1 = "0.7.3"
serde_json = "1.0.133"
sev = "5.0.0"
sha2 = "0.10.9"
uuid = { version = "1.11.0", features = ["v4"] }
